| Summary: | ASTERISK-19292: New "dialplan remove context" and modification of "dialplan add include" | ||
| Reporter: | Andrey Solovyev (corruptor) | Labels: | |
| Date Opened: | 2012-02-02 07:24:55.000-0600 | Date Closed: | 2012-07-31 15:06:21 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | PBX/pbx_config |
| Versions: | SVN | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) dialplan_add_include.patch ( 1) dialplan_remove_context.patch | |
| Description: | I've noticed that we can remove particular extension from context with dialplan remove extension command but in order to remove all extensions in the context we should delete them on by one. I've created dialplan remove context command which uses ast_context_destroy to destroy the whole context with all extensions. I've created to functions for in pbx_config.c: handle_cli_dialplan_remove_context which actually removes context and complete_dialplan_remove_context which completes input. They are based on other similar functions and pretty trivial but I can be mistaken somewhere. I've also modified dialplan add include <context2> into <context1>. I've made it similar dialplan add extension ... command. It creates <context1> if it doesn't exist and I've also modified complete_dialplan_add_include and removed check for existance of <context2> because we can include non-existent context into another one. I usually include empty (non-existent) contexts in advance. Should we raise warning in this case as it's raised while reading extensions.conf? I upload both patches against the trunk. | ||
| Comments: | |||